--- a/MySQL_Xampp_Database_Project/test-output/old/Default suite/methods.html
+++ b/MySQL_Xampp_Database_Project/test-output/old/Default suite/methods.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="63cf88">  <td>24/09/12 22:22:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Study_Tour.testMountWashington()[pri:2, instance:database.Study_Tour@1e04fa0a]">testMountWashington</td> 
-  <td>main@87285178</td>   <td></td> </tr>
-<tr bgcolor="63cf88">  <td>24/09/12 22:22:05</td>   <td>-396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Study_Tour.testNiagaraFalls()[pri:1, instance:database.Study_Tour@1e04fa0a]">testNiagaraFalls</td> 
+<tr bgcolor="63cf88">  <td>24/09/20 00:55:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Students_Details.testDB()[pri:0, instance:database.Students_Details@66d3eec0]">testDB</td> 
   <td>main@87285178</td>   <td></td> </tr>
 </table>
