--- a/Rest_Assured_Api_Maven_Project/test-output/emailable-report.html
+++ b/Rest_Assured_Api_Maven_Project/test-output/emailable-report.html
@@ -9,10 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3,393</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,166</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">restassured.Example1</td><td><a href="#m0">test1</a></td><td rowspan="1">1723689606267</td><td rowspan="1">3352</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">apitest.Rest_Api_Test</td><td><a href="#m0">createUser</a></td><td rowspan="1">1726546352473</td><td rowspan="1">801</td></tr><tr class="passedeven"><td><a href="#m1">deleteUser</a></td><td rowspan="1">1726546353739</td><td rowspan="1">439</td></tr><tr class="passedeven"><td><a href="#m2">getUsers</a></td><td rowspan="1">1726546349053</td><td rowspan="1">3403</td></tr><tr class="passedeven"><td><a href="#m3">updateUser</a></td><td rowspan="1">1726546353279</td><td rowspan="1">454</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">restassured.Example1#test1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">apitest.Rest_Api_Test#createUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">apitest.Rest_Api_Test#deleteUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">apitest.Rest_Api_Test#getUsers</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">apitest.Rest_Api_Test#updateUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
