--- a/Rest_Assured_Api_Maven_Project/test-output/old/Default suite/classes.html
+++ b/Rest_Assured_Api_Maven_Project/test-output/old/Default suite/classes.html
@@ -4,14 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>restassured.Example1</td>
+<td>apitest.Rest_Api_Test</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test1</td>
+<td>getUsers</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteUser</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>updateUser</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>createUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
