--- a/Rest_Assured_Api_Maven_Project/test-output/old/Default suite/methods.html
+++ b/Rest_Assured_Api_Maven_Project/test-output/old/Default suite/methods.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e5a1be">  <td>24/08/14 22:40:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Example1.test1()[pri:0, instance:restassured.Example1@7b36aa0c]">test1</td> 
+<tr bgcolor="ccdbb5">  <td>24/09/17 00:12:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Rest_Api_Test.updateUser()[pri:3, instance:apitest.Rest_Api_Test@25641d39]">updateUser</td> 
+  <td>main@1192108080</td>   <td></td> </tr>
+<tr bgcolor="ccdbb5">  <td>24/09/17 00:12:29</td>   <td>-4226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Rest_Api_Test.getUsers()[pri:1, instance:apitest.Rest_Api_Test@25641d39]">getUsers</td> 
+  <td>main@1192108080</td>   <td></td> </tr>
+<tr bgcolor="ccdbb5">  <td>24/09/17 00:12:32</td>   <td>-805</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Rest_Api_Test.createUser()[pri:2, instance:apitest.Rest_Api_Test@25641d39]">createUser</td> 
+  <td>main@1192108080</td>   <td></td> </tr>
+<tr bgcolor="ccdbb5">  <td>24/09/17 00:12:33</td>   <td>461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Rest_Api_Test.deleteUser()[pri:4, instance:apitest.Rest_Api_Test@25641d39]">deleteUser</td> 
   <td>main@1192108080</td>   <td></td> </tr>
 </table>
